Bug 382862 - Opening corrupted file from Explorer shows error dialog under splash screen
Summary: Opening corrupted file from Explorer shows error dialog under splash screen
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.2.0-beta.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-28 14:43 UTC by Alvin Wong
Modified: 2017-08-18 14:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (300.45 KB, image/png)
2017-07-28 14:43 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2017-07-28 14:43:10 UTC
Created attachment 106925 [details]
Screenshot

Krita shows a message box complaining about corrupted file but it's covered by the splash screen.
Comment 1 Halla Rempt 2017-08-18 14:23:52 UTC
Git commit 8baf9d726f4e63e577dc439dba776452da13ca59 by Boudewijn Rempt.
Committed on 18/08/2017 at 14:23.
Pushed by rempt into branch 'krita/3.2'.

Don't use always on top except for linux

M  +5    -1    libs/ui/kis_splash_screen.cpp

https://commits.kde.org/krita/8baf9d726f4e63e577dc439dba776452da13ca59