Don't use always on top except for linux

BUG:382862